--- a/Leave-Management/Views/LeaveAllocation/Index.cshtml
+++ b/Leave-Management/Views/LeaveAllocation/Index.cshtml
@@ -23,7 +23,7 @@
             </td>
             <td>
                 <a class="btn btn-outline-success" asp-action="SetLeave" asp-route-id="@item.Id">
-                    <i class="fade fa-pencil"></i>Allocate to Employees
+                    <i class="fas fa-user-edit"></i>Allocate to Employees
                 </a>
             </td>
         </tr>
